--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 # dotenv environment variable files
+.env.development
+.env.test
 .env
 .env.development.local
 .env.test.local
